--- a/HTML e CSS/Curse/class 03/styles.css
+++ b/HTML e CSS/Curse/class 03/styles.css
@@ -20,7 +20,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 1rem 2rem;
+  padding: 1rem;
 }
 
 .container h1 {
@@ -30,6 +30,27 @@ a {
 
 .container h1 span {
   color: #3182CE;
+}
+
+.backLink_container {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  justify-content: end;
+}
+
+.backLink {
+  padding: 0.5rem 1rem;
+  background-color: #3182CE;
+  border: 0;
+  border-radius: 4px;
+  font-weight: bold;
+  margin-right: 16px;
+  transition: all 0.2s;
+}
+
+.backLink:hover {
+  filter: brightness(0.9);
 }
 
 .form_container {
