--- a/HTML e CSS/Curse/class 06/styles.css
+++ b/HTML e CSS/Curse/class 06/styles.css
@@ -8,9 +8,35 @@ body {
 
 .container {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3rem;
+}
+
+.content {
+    display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    gap: 2rem;
+}
+
+.backLink {
+    padding: 0.5rem 1rem;
+    background-color: #3182CE;
+    border: 0;
+    border-radius: 4px;
+    font-weight: bold;
+    align-self: flex-end;
+    margin-right: 16px;
+    transition: all 0.2s;
+    color: #fff;
+    text-decoration: none;
+}
+
+.backLink:hover {
+    filter: brightness(0.9);
 }
 
 .profile {
@@ -34,7 +60,7 @@ body {
 }
 
 .black {
-    
+
     background-color: black;
 }
 
