Booking page creation, changing primary and secondary colors and adding styles

--- a/HTML e CSS/Curse/hotel job/src/pages/Home/styles.scss
+++ b/HTML e CSS/Curse/hotel job/src/pages/Home/styles.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  overflow-x: hidden;
 
   h1 {
     margin-top: 3rem;
@@ -26,7 +27,7 @@
 
     img {
       margin-top: 3rem;
-      width: calc(100vw - 20px);
+      width: 100vw;
     }
   }
 }
