--- a/HTML e CSS/Curse/hotel job/src/pages/Home/styles.css
+++ b/HTML e CSS/Curse/hotel job/src/pages/Home/styles.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  overflow-x: hidden;
 }
 .main_container h1 {
   margin-top: 3rem;
@@ -24,5 +25,5 @@
 }
 .main_container section img {
   margin-top: 3rem;
-  width: calc(100vw - 20px);
+  width: 100vw;
 }/*# sourceMappingURL=styles.css.map */
