--- a/HTML e CSS/Curse/hotel job/src/pages/Reservation/styles.scss
+++ b/HTML e CSS/Curse/hotel job/src/pages/Reservation/styles.scss
@@ -6,25 +6,100 @@
   align-items: center;
   height: 100%;
 
+  h1 {
+    font-size: 2.5rem;
+    margin-top: 1rem;
+
+    span {
+      color: var(--primary-color);
+    }
+  }
+
+  .reserve_button {
+    max-width: 300px;
+    width: 100%;
+    margin-top: 1.5rem;
+    padding: 0.8rem 0;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 1.3rem;
+    background-color: #065666;
+    color: var(--white);
+    border: 0;
+    border-radius: 8px;
+    transition: all .2s;
+
+    &:hover {
+      background-color: #0987A0;
+      transform: scale(0.95);
+    }
+  }
+
   section {
 
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 1rem;
+    gap: 2rem;
+    margin-top: 2rem;
 
     .main_card {
       display: flex;
       flex-direction: column;
       gap: 1rem;
       max-width: 280px;
-      background-color: #1A202C;
+      height: 600px;
+      background-color: #065666;
+      color: var(--white);
+      border-radius: 4px;
+      transition: all 0.2s;
 
-      img {
+      .card_content {
+        padding: 1rem;
+
+        p {
+          line-height: 1.5rem;
+          margin-top: 1rem;
+        }
+      }
+
+      .card_banner {
+        border-radius: 4px 4px 0 0;
         width: 280px;
-        height: 300px;
+        height: 270px;
         object-fit: cover;
       }
+
+      .card_options {
+        display: flex;
+        flex-direction: column;
+        background-color: #0987A0;
+        padding: 0.5rem;
+        border-radius: 4px;
+        margin-top: 1rem;
+        gap: 0.8rem;
+      }
+
+      .card_option {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+
+        .card_option_icon {
+          width: 25px;
+          height: 25px;
+        }
+
+        span {
+          margin-top: 3px;
+        }
+
+      }
+
+      &:hover {
+        transform: scale(1.1);
+      }
+      
     }
   }
 }
