--- a/HTML e CSS/Curse/hotel job/src/styles/global.css
+++ b/HTML e CSS/Curse/hotel job/src/styles/global.css
@@ -9,7 +9,8 @@
   --gray-500: #718096;
   --gray-700: #2D3748;
   --gray-900: #171923;
-  --primary-color: #3182CE;
+  --primary-color: #0987A0;
+  --secondary-color: #065666;
 }
 
 html,
@@ -18,9 +19,8 @@ body {
   flex-direction: column;
   height: 100%;
   font-family: "Roboto", sans-serif;
-  padding: 0 1rem;
-  background-color: var(--dark);
-  color: var(--white);
+  background-color: var(--white);
+  color: var(--dark);
 }
 
 main {
@@ -51,6 +51,8 @@ button {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: var(--dark);
+  padding: 0.5rem 1rem;
 }
 .header_container nav ul {
   display: flex;
@@ -72,12 +74,12 @@ button {
   font-size: 1rem;
   font-weight: bold;
   background-color: var(--primary-color);
-  color: var(--dark);
+  color: var(--white);
   text-transform: uppercase;
-  transition: all 0.2s;
+  transition: filter 0.2s;
 }
 .header_container nav ul button:hover {
-  transform: scale(0.98);
+  filter: brightness(0.8);
 }
 
 .header_logo a {
@@ -86,8 +88,8 @@ button {
   gap: 1rem;
 }
 .header_logo a img {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
 }
 .header_logo a div {
   display: flex;
@@ -96,7 +98,7 @@ button {
   align-items: center;
   font-weight: bold;
   font-size: 1.5rem;
-  height: 100px;
+  height: 80px;
 }
 .header_logo a span {
   color: var(--primary-color);
@@ -105,5 +107,7 @@ button {
 footer {
   font-size: 0.8rem;
   color: var(--primary-color);
-  padding: 1.5rem;
+  padding: 1rem;
+  background-color: var(--dark);
+  margin-top: 2rem;
 }/*# sourceMappingURL=global.css.map */
