--- a/HTML e CSS/Curse/hotel job/src/styles/global.scss
+++ b/HTML e CSS/Curse/hotel job/src/styles/global.scss
@@ -12,7 +12,8 @@
     --gray-700: #2D3748;
     --gray-900: #171923;
 
-    --primary-color: #3182CE;
+    --primary-color: #0987A0;
+    --secondary-color: #065666;
 }
 
 html,
@@ -21,9 +22,8 @@ body {
     flex-direction: column;
     height: 100%;
     font-family: 'Roboto', sans-serif;
-    padding: 0 1rem;
-    background-color: var(--dark);
-    color: var(--white);
+    background-color: var(--white);
+    color: var(--dark);
 }
 
 main {
@@ -57,6 +57,8 @@ button {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: var(--dark);
+    padding: 0.5rem 1rem;
 
     nav {
         ul {
@@ -81,12 +83,12 @@ button {
                 font-size: 1rem;
                 font-weight: bold;
                 background-color: var(--primary-color);
-                color: var(--dark);
+                color: var(--white);
                 text-transform: uppercase;
-                transition: all 0.2s;
+                transition: filter 0.2s;
 
                 &:hover {
-                    transform: scale(0.98);
+                    filter: brightness(0.8);
                 }
             }
         }
@@ -101,8 +103,8 @@ button {
         gap: 1rem;
 
         img {
-            width: 100px;
-            height: 100px;
+            width: 80px;
+            height: 80px;
         }
 
         div {
@@ -112,7 +114,7 @@ button {
             align-items: center;
             font-weight: bold;
             font-size: 1.5rem;
-            height: 100px;
+            height: 80px;
         }
 
         span {
@@ -126,5 +128,7 @@ button {
 footer {
     font-size: 0.8rem;
     color: var(--primary-color);
-    padding: 1.5rem;
+    padding: 1rem;
+    background-color: var(--dark);
+    margin-top: 2rem;
 }
