Add new pages, new styles and add tailwind with CDN

--- a/HTML e CSS/Curse/hotel job/src/pages/Home/styles.scss
+++ b/HTML e CSS/Curse/hotel job/src/pages/Home/styles.scss
@@ -17,6 +17,11 @@
     }
   }
 
+  .home_subtitle {
+    color: var(--primary-color);
+    font-weight: bold;
+  }
+
   section {
     display: flex;
     justify-content: space-between;
