--- a/HTML e CSS/Curse/hotel job/src/pages/Home/styles.css
+++ b/HTML e CSS/Curse/hotel job/src/pages/Home/styles.css
@@ -15,6 +15,10 @@
   margin: 0;
   padding: 0;
 }
+.main_container .home_subtitle {
+  color: var(--primary-color);
+  font-weight: bold;
+}
 .main_container section {
   display: flex;
   justify-content: space-between;
