--- a/HTML e CSS/Curse/hotel job/src/pages/Reservation/styles.css
+++ b/HTML e CSS/Curse/hotel job/src/pages/Reservation/styles.css
@@ -16,6 +16,9 @@
   max-width: 300px;
   width: 100%;
   margin-top: 1.5rem;
+}
+.main_container .reserve_button button {
+  width: 100%;
   padding: 0.8rem 0;
   font-weight: bold;
   text-transform: uppercase;
@@ -26,7 +29,7 @@
   border-radius: 8px;
   transition: all 0.2s;
 }
-.main_container .reserve_button:hover {
+.main_container .reserve_button button:hover {
   background-color: #0987A0;
   transform: scale(0.95);
 }
@@ -35,7 +38,7 @@
   align-items: center;
   justify-content: center;
   gap: 2rem;
-  margin-top: 2rem;
+  margin: 2rem 0;
 }
 .main_container section .main_card {
   display: flex;
