--- a/HTML e CSS/Curse/hotel job/src/pages/Reservation/styles.scss
+++ b/HTML e CSS/Curse/hotel job/src/pages/Reservation/styles.scss
@@ -1,5 +1,4 @@
 .main_container {
-
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,20 +18,24 @@
     max-width: 300px;
     width: 100%;
     margin-top: 1.5rem;
-    padding: 0.8rem 0;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 1.3rem;
-    background-color: #065666;
-    color: var(--white);
-    border: 0;
-    border-radius: 8px;
-    transition: all .2s;
 
-    &:hover {
-      background-color: #0987A0;
-      transform: scale(0.95);
-    }
+    button {
+      width: 100%;
+      padding: 0.8rem 0;
+      font-weight: bold;
+      text-transform: uppercase;
+      font-size: 1.3rem;
+      background-color: #065666;
+      color: var(--white);
+      border: 0;
+      border-radius: 8px;
+      transition: all .2s;
+  
+      &:hover {
+        background-color: #0987A0;
+        transform: scale(0.95);
+      }
+    }    
   }
 
   section {
@@ -41,7 +44,7 @@
     align-items: center;
     justify-content: center;
     gap: 2rem;
-    margin-top: 2rem;
+    margin: 2rem 0;
 
     .main_card {
       display: flex;
