--- a/HTML e CSS/Curse/hotel job/src/pages/SignUp/styles.scss
+++ b/HTML e CSS/Curse/hotel job/src/pages/SignUp/styles.scss
@@ -1,81 +1,24 @@
-.col-1 {
-  width: 8.33%;
-}
-
-.col-2 {
-  width: 16.66%;
-}
-
-.col-3 {
-  width: 25%;
-}
-
-.col-4 {
-  width: 33.33%;
-}
-
-.col-5 {
-  width: 41.66%;
-}
-
-.col-6 {
-  width: 50%;
-}
-
-.col-7 {
-  width: 58.33%;
-}
-
-.col-8 {
-  width: 66.66%;
-}
-
-.col-9 {
-  width: 75%;
-}
-
-.col-10 {
-  width: 83.33%;
-}
-
-.col-11 {
-  width: 91.66%;
-}
-
-.col-12 {
-  width: 100vw;
-}
-
-[class*="col-"] {
-  float: left;
-  padding: 15px;
-}
-
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.container {
+.main_container {
   height: 100%;
-  background: rgb(103, 232, 249);
-  background: linear-gradient(90deg, rgba(103, 232, 249, 1) 0%, rgba(147, 197, 253, 1) 100%);
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  background: rgb(103,232,249);
+  background: linear-gradient(90deg, rgba(103,232,249,1) 0%, rgba(147,197,253,1) 100%);
 }
 
 .form_container {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  justify-items: center;
   align-items: center;
-  gap: 0.5rem;
+  grid-template-rows: repeat(3, 3rem) 1px;
+  gap: 1rem;
   padding: 2rem;
   border: 1px solid var(--secondary-color);
   border-radius: 4px;
+  max-width: 450px;
+  width: 100%;
   background-color: #111827;
-  margin: 0 auto;
 
   h1{
     text-transform: uppercase;
@@ -83,17 +26,6 @@
     background-color: var(--secondary-color);
     width: 100%;
     margin-bottom: 1rem;
-  }
-
-  .form_inputs_group {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 0.5rem;
-
-    input {
-      width: inherit;
-    }
   }
 }
 
@@ -121,7 +53,6 @@
 
 .form_button {
   width: 100%;
-  margin-top: 1rem;
   padding: 0.5rem 0;
   text-transform: uppercase;
   font-weight: bold;
@@ -138,3 +69,25 @@
   }
 }
 
+.form_options_container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  font-size: 0.95rem;
+  margin-top: 2rem;
+
+  .form_options_links{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.4rem;
+
+    a{
+      transition: all .2s;
+  
+      &:hover {
+        filter: brightness(0.9);
+      }
+    }
+  }
+
+}
