Creation of the mobile layout and finalization of the project

--- a/HTML e CSS/Curse/hotel job/src/pages/Home/styles.css
+++ b/HTML e CSS/Curse/hotel job/src/pages/Home/styles.css
@@ -21,13 +21,25 @@
 }
 .main_container section {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
-  flex-direction: column;
-  max-width: 1024px;
 }
 .main_container section img {
   margin-top: 3rem;
   width: 100vw;
+}
+
+@media only screen and (max-width: 640px) {
+  .main_container {
+    padding: 0 1rem;
+  }
+  .main_container h1 {
+    margin-top: 1rem;
+    font-size: 2rem;
+    text-align: center;
+  }
+  .main_container .home_subtitle {
+    text-align: center;
+  }
+  .main_container section img {
+    margin-top: 1rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
