--- a/HTML e CSS/Curse/hotel job/src/pages/Payment/styles.scss
+++ b/HTML e CSS/Curse/hotel job/src/pages/Payment/styles.scss
@@ -3,6 +3,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: rgb(103,232,249);
+  background: linear-gradient(90deg, rgba(103,232,249,1) 0%, rgba(147,197,253,1) 100%);
 }
 
 .form_container {
@@ -10,7 +12,6 @@
   max-width: 600px;
   width: 100%;
   border-radius: 8px;
-  border: 4px solid black;
   background-color: #111827;
   color: var(--white);
 
@@ -71,5 +72,21 @@
 
   &:hover {
     filter: brightness(0.9);
+  }
+}
+
+// Mobile
+
+@media only screen and (max-width: 640px) {
+  .container {
+    padding: 0 1rem;
+  }
+
+  .form_container{
+    padding: 1rem;
+  }
+
+  .form_pagaments {
+    flex-direction: column;
   }
 }
