--- a/HTML e CSS/Curse/hotel job/src/pages/Registration/styles.scss
+++ b/HTML e CSS/Curse/hotel job/src/pages/Registration/styles.scss
@@ -138,3 +138,29 @@
   }
 }
 
+// Mobile
+
+@media only screen and (max-width: 1024px) {
+  .col-3 {
+    width: 40%;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .col-3 {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .col-3 {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .form_inputs_group {
+    flex-direction: column;
+    width: 100%;
+  }
+}
