--- a/HTML e CSS/Curse/hotel job/src/pages/Reservation/styles.scss
+++ b/HTML e CSS/Curse/hotel job/src/pages/Reservation/styles.scss
@@ -106,3 +106,61 @@
     }
   }
 }
+
+// Mobile
+
+@media only screen and (max-width: 768px) {
+  .main_container {
+    padding: 0 1rem;
+
+    h1 {
+      font-size: 2rem;
+      text-align: center;
+    }
+
+    .reserve_button {
+  
+      button {
+        padding: 0.5rem 0;
+        font-size: 1.2rem;
+      }    
+    }
+
+    section {
+      flex-direction: column;
+      gap: 1.5rem;
+  
+      .main_card {
+        max-width: 500px;
+  
+        .card_banner {
+          width: 100%;
+        }
+  
+        &:hover {
+          transform: scale(1);
+        }
+        
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .main_container {
+
+    h1 {
+      font-size: 1.5rem;
+    }
+
+    .reserve_button {
+      width: 50%;  
+    }
+
+    section {
+      .main_card {
+        max-width: 100%;        
+      }
+    }
+  }
+}
