--- a/HTML e CSS/Curse/hotel job/src/styles/global.css
+++ b/HTML e CSS/Curse/hotel job/src/styles/global.css
@@ -17,7 +17,7 @@ html,
 body {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   font-family: "Roboto", sans-serif;
   background-color: var(--white);
   color: var(--dark);
@@ -104,9 +104,92 @@ button {
   color: var(--primary-color);
 }
 
+.header_btn_mobile {
+  display: none;
+}
+
 footer {
   font-size: 0.8rem;
   color: var(--primary-color);
   padding: 1rem;
   background-color: var(--dark);
+}
+
+@media only screen and (max-width: 640px) {
+  .header_container {
+    padding: 0.5rem 1rem;
+  }
+  .header_container .header-nav.active .header_menu {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+  }
+  .header_container .header-nav.active .header_menu li {
+    border-bottom: 1px solid var(--primary-color);
+    width: 100%;
+    text-align: center;
+  }
+  .header_container .header-nav.active .header_menu li:last-child {
+    border-bottom: 0;
+  }
+  .header_container .header-nav.active .header_menu li:last-child button {
+    width: 100%;
+  }
+  .header_container .header-nav.active .hamburguer {
+    border-top-color: transparent;
+  }
+  .header_container .header-nav.active .hamburguer::after {
+    transform: rotate(135deg);
+    top: -7px;
+  }
+  .header_container .header-nav.active .hamburguer::before {
+    transform: rotate(-135deg);
+  }
+  .header_container .header_menu {
+    display: none;
+    position: absolute;
+    width: 100%;
+    top: 50px;
+    right: 0;
+    background-color: var(--dark);
+    height: 100%;
+    z-index: 1000;
+  }
+  .header_logo a {
+    gap: 0.5rem;
+  }
+  .header_logo a img {
+    width: 40px;
+    height: 40px;
+  }
+  .header_logo a div {
+    font-size: 1rem;
+    height: 40px;
+  }
+  .header_logo a span {
+    color: var(--primary-color);
+  }
+  .header_btn_mobile {
+    display: flex;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: none;
+    background: none;
+    gap: 0.5rem;
+  }
+  .header_btn_mobile .hamburguer {
+    display: block;
+    width: 20px;
+    border-top: 2px solid var(--primary-color);
+  }
+  .header_btn_mobile .hamburguer::after, .header_btn_mobile .hamburguer::before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 2px;
+    margin-top: 5px;
+    background-color: var(--primary-color);
+    transition: 0.3s;
+    position: relative;
+  }
 }/*# sourceMappingURL=global.css.map */
