--- a/javascript/global.css
+++ b/javascript/global.css
@@ -37,3 +37,24 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+li {
+  list-style: none;
+}
+
+.button_back_home {
+  padding: 0.5rem 1.5rem;
+  border-radius: 10px;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+  background: rgb(221,176,0);
+  background: linear-gradient(45deg, rgba(221,176,0,1) 0%, rgba(254,255,0,1) 100%);
+}
+
+.button_back_home:hover {
+  background: linear-gradient(230deg, rgba(221,176,0,1) 0%, rgba(254,255,0,1) 100%);
+  transform: scale(1.2);
+}
