--- a/javascript/curse 03/styles.css
+++ b/javascript/curse 03/styles.css
@@ -103,6 +103,6 @@ pre .indentation-3{
   font-size: 2.25rem;
 }
 
-.calc_eCrescente_Input input {
+.calc_Width_80_Input input {
   max-width: 80%;
 }
