--- a/javascript/global.css
+++ b/javascript/global.css
@@ -37,12 +37,13 @@ html, body {
 main {
   max-width: 1440px;
   margin: 0 auto;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 3rem;
+  padding: 2rem;
 }
 
 a {
@@ -74,8 +75,8 @@ li {
 .main_container {
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 1.5rem;
+  flex-wrap: wrap;
 }
 
 /* Cards styles */
