--- a/javascript/styles.css
+++ b/javascript/styles.css
@@ -31,9 +31,10 @@
 
 .main_content {
   display: flex;
-  justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 2rem;
+  justify-content: center;
 }
 
 .card_container {
