--- a/Javascript/shire-bank/_variables.scss
+++ b/Javascript/shire-bank/_variables.scss
@@ -14,6 +14,9 @@ $blue-500: rgb(32, 30, 192);
 
 $pink: #B83280;
 
+$red-700: #b91c1c;
+$green-700: #15803d;
+
 $background-rgb-button: linear-gradient(140deg, rgb(29, 18, 61) 0%, rgba(50, 38, 89, 1) 68%, rgb(29, 18, 61) 100%);
 $background-rgb-button-before: linear-gradient(140deg, rgb(109, 0, 252) 0%, rgb(118, 14, 255) 50%, rgb(167, 14, 255) 70%, rgb(235, 14, 255) 100%);
 $background-rgb-button-before-hover: linear-gradient(140deg, rgb(66, 3, 47) 0%, rgb(71, 6, 51) 50%, rgb(68, 5, 49) 68%, rgb(75, 5, 53) 100%);
