--- a/Javascript/shire-bank/src/pages/Application/Dashboard/styles.css
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/styles.css
@@ -11,6 +11,7 @@ aside {
   background: linear-gradient(140deg, rgb(42, 29, 90) 0%, rgb(52, 33, 109) 50%, rgb(63, 48, 112) 68%, rgb(109, 36, 88) 100%);
   width: 250px;
   color: #fff;
+  min-height: 100vh;
 }
 aside .aside-container {
   width: 250px;
@@ -19,6 +20,7 @@ aside .aside-container {
   flex-direction: column;
   padding: 1rem;
   gap: 1rem;
+  height: 100%;
 }
 aside div:first-child {
   margin-top: 1rem;
@@ -53,93 +55,34 @@ aside .aside-button-option button:hover {
   gap: 2rem;
 }
 
-.home-section-container {
+.section-container {
   padding: 1rem;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
   background: linear-gradient(140deg, rgb(31, 21, 66) 0%, rgb(42, 27, 89) 50%, rgb(50, 38, 89) 68%, rgb(71, 23, 57) 100%);
 }
-.home-section-container button {
-  background-color: transparent;
-  border: none;
-  font-family: "Alexandria", sans-serif;
-  font-size: 1rem;
-  transition: all 0.4s;
-}
-.home-section-container button:hover {
-  transform: scale(1.1);
-}
-.home-section-container button img {
-  width: 80px;
-}
-.home-section-container .home-section-content {
+.section-container .section-content {
   background: linear-gradient(140deg, rgb(21, 14, 44) 0%, rgb(27, 18, 56) 50%, rgb(28, 21, 51) 68%, rgb(39, 13, 32) 100%);
   border-radius: 8px;
   color: #f4f4f5;
   padding: 1rem;
 }
-.home-section-container .home-section-content h2 {
+.section-container .section-content h2 {
   font-size: 1.25rem;
   color: #B83280;
 }
-.home-section-container .home-section-content h3 {
+.section-container .section-content h3 {
   font-weight: 400;
-  border-bottom: 1px solid #d4d4d8;
   font-size: 1.125rem;
   letter-spacing: 1.5px;
 }
-.home-section-container .home-section-content h2 + div {
+.section-container .section-content h2 + div {
   margin-top: 2rem;
 }
-.home-section-container .home-section-content h3 + span {
+.section-container .section-content h3 + span {
   font-size: 1.25rem;
   display: block;
   text-align: end;
-}
-
-.home-section-info .home-section-info-user {
-  position: relative;
-  font-size: 1.2rem;
-}
-.home-section-info .home-section-info-user span {
-  display: block;
-}
-.home-section-info .home-section-info-user a {
-  text-align: center;
-  position: absolute;
-  z-index: 1;
-  right: 0;
-  top: 0;
-}
-.home-section-info .home-section-info-user a .aside-button-logout {
-  font-size: 1.1rem;
-  padding: 0.5rem 2rem;
-}
-.home-section-info .home-section-info-balance {
-  margin-top: 3rem;
-}
-.home-section-info .home-section-info-balance span {
-  font-size: 1.25rem;
-  color: #f4f4f5;
-  display: block;
-  text-align: end;
-}
-
-.home-section-options {
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-.home-section-options .home-section-options-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 25%;
-  padding: 1rem;
-  color: #f4f4f5;
-}
-
-.home-section-creditCard .home-section-creditCard-content div:last-child {
-  margin-top: 0.5rem;
+  letter-spacing: 1px;
 }/*# sourceMappingURL=styles.css.map */
