--- a/Javascript/shire-bank/src/pages/Application/Dashboard/styles.scss
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/styles.scss
@@ -13,6 +13,7 @@ aside {
   background: $background-rgb-300;
   width: 250px;
   color: $white;
+  min-height: 100vh;
 
   .aside-container {
     width: 250px;
@@ -21,6 +22,7 @@ aside {
     flex-direction: column;
     padding: 1rem;
     gap: 1rem;
+    height: 100%;
   }
 
   & div:first-child {
@@ -61,30 +63,14 @@ aside {
   gap: 2rem;
 }
 
-.home-section-container {
+.section-container {
   padding: 1rem;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
   background: $background-rgb-500;
 
-  button {
-    background-color: transparent;
-    border: none;
-    font-family: 'Alexandria', sans-serif;
-    font-size: 1rem;
-    transition: all .4s;
-
-    &:hover {
-      transform: scale(1.1);
-    }
-
-    img {
-      width: 80px;
-    }
-  }
-
-  .home-section-content {
+  .section-content {
     background: $background-rgb-700;
     border-radius: 8px;
     color: $gray-100;
@@ -97,7 +83,7 @@ aside {
 
     h3 {
       font-weight: 400;
-      border-bottom: 1px solid $gray-300;
+      
       font-size: 1.125rem;
       letter-spacing: 1.5px;
     }
@@ -110,65 +96,7 @@ aside {
       font-size: 1.25rem;
       display: block;
       text-align: end;
-    }
-  }
-}
-
-.home-section-info {
-  .home-section-info-user {
-    position: relative;
-    font-size: 1.2rem;
-
-    span {
-      display: block;
-    }
-
-    a {
-      text-align: center;
-      position: absolute;
-      z-index: 1;
-      right: 0;
-      top: 0;
-
-      .aside-button-logout {
-        font-size: 1.1rem;
-        padding: 0.5rem 2rem;
-      }
-    }
-  }
-
-  .home-section-info-balance {
-    margin-top: 3rem;
-
-    span {
-      font-size: 1.25rem;
-      color: $gray-100;
-      display: block;
-      text-align: end;
-    }
-  }
-}
-
-.home-section-options {
-  flex-direction: row;
-  flex-wrap: wrap;
-
-  .home-section-options-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 25%;
-    padding: 1rem;
-    color: $gray-100;
-  }
-}
-
-.home-section-creditCard {
-  .home-section-creditCard-content {
-
-    & div:last-child {
-      margin-top: 0.5rem;
+      letter-spacing: 1px;
     }
   }
 }
