--- a/Javascript/shire-bank/src/pages/Login/styles.css
+++ b/Javascript/shire-bank/src/pages/Login/styles.css
@@ -31,7 +31,7 @@ header button {
 }
 .main-wrapper section h2 {
   font-size: 2.5rem;
-  font-family: "Courgette", cursive;
+  font-family: "Alexandria", sans-serif;
 }
 .main-wrapper section .section-call-to-action p {
   color: #d4d4d8;
@@ -133,4 +133,30 @@ header button {
 .main-wrapper .login-container form .form-checkbox {
   flex-direction: row;
   gap: 1rem;
+}
+
+@media only screen and (max-width: 1024px) {
+  .main-wrapper section h2 {
+    font-size: 2rem;
+  }
+  .main-wrapper .login-container .login-content h3 {
+    font-size: 1.5rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .main-wrapper section h2 {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+  }
+  .main-wrapper section .section-call-to-action p {
+    font-size: 1rem;
+    margin-top: 1rem;
+    line-height: 1.5;
+  }
+  .main-wrapper section .section-comments {
+    font-size: 0.8rem;
+  }
+  .main-wrapper .login-container .login-content h3 {
+    font-size: 1rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
