--- a/Javascript/shire-bank/src/pages/Login/styles.scss
+++ b/Javascript/shire-bank/src/pages/Login/styles.scss
@@ -36,7 +36,7 @@ header {
 
     h2 {
       font-size: 2.5rem;
-      font-family: 'Courgette', cursive;
+      font-family: 'Alexandria', sans-serif;
     }
 
     .section-call-to-action {
@@ -163,4 +163,55 @@ header {
       }
     }
   }
+}
+
+// Media Queries
+
+@media only screen and (max-width: 1024px) {
+  .main-wrapper {
+    section {
+      h2 {
+        font-size: 2rem;
+      }
+    }
+
+    .login-container {
+      .login-content {
+        h3 {
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }  
+}
+
+@media only screen and (max-width: 768px) {
+  .main-wrapper {
+    section {
+      h2 {
+        margin-top: 1rem;
+        font-size: 1.5rem;
+      }
+
+      .section-call-to-action {
+        p {
+          font-size: 1rem;
+          margin-top: 1rem;
+          line-height: 1.5;
+        }
+      }
+
+      .section-comments {
+        font-size: .8rem;
+      }
+    }
+
+    .login-container {
+      .login-content {
+        h3 {
+          font-size: 1rem;
+        }
+      }
+    }
+  } 
 }
