--- a/Javascript/shire-bank/styles.css
+++ b/Javascript/shire-bank/styles.css
@@ -16,6 +16,7 @@
   color: #fafafa;
   margin-top: 4rem;
   font-size: 5rem;
+  font-family: "Alexandria", sans-serif;
   font-family: "Courgette", cursive;
 }
 .main-content h1 span {
