--- a/Javascript/shire-bank/styles.scss
+++ b/Javascript/shire-bank/styles.scss
@@ -19,6 +19,7 @@
     color: $gray-50;
     margin-top: 4rem;
     font-size: 5rem;
+    font-family: 'Alexandria', sans-serif;
     font-family: 'Courgette', cursive;
 
     span {
