--- a/Javascript/shire-bank/src/pages/Application/Dashboard/styles.css
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/styles.css
@@ -85,4 +85,113 @@ aside .aside-button-option button:hover {
   display: block;
   text-align: end;
   letter-spacing: 1px;
+}
+
+.transfer-and-payments-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+  position: relative;
+}
+.transfer-and-payments-section .transfer-and-payments-section-title {
+  position: absolute;
+  left: 0;
+  padding: 1rem;
+  top: 0;
+  font-size: 1.2rem;
+}
+.transfer-and-payments-section .transfer-and-payments-section-card {
+  display: flex;
+  flex-direction: column;
+  background-color: transparent;
+  gap: 0.5rem;
+  border: 2px solid transparent;
+  padding: 0.5rem;
+  border-radius: 8px;
+  margin-top: 2.5rem;
+  transition: all 0.4s;
+}
+.transfer-and-payments-section .transfer-and-payments-section-card.active {
+  border: 2px solid rgb(184, 50, 128);
+}
+.transfer-and-payments-section .transfer-and-payments-section-card:hover {
+  transform: scale(1.1);
+}
+.transfer-and-payments-section .transfer-and-payments-section-card img {
+  width: 100px;
+}
+.transfer-and-payments-section .transfer-and-payments-section-card span {
+  width: 100%;
+  text-align: center;
+  font-family: "Alexandria", sans-serif;
+  color: #f4f4f5;
+  font-size: 1rem;
+}
+
+.transfer-and-payments-section-form {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.transfer-and-payments-section-form .transfer-and-payments-section-form-resume {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  width: 50%;
+  border-radius: 8px;
+  color: #f4f4f5;
+  padding: 0 1rem;
+  border: 2px solid #B83280;
+}
+.transfer-and-payments-section-form .transfer-and-payments-section-form-resume .transfer-and-payments-section-form-resume-title {
+  font-size: 1.3rem;
+  color: #B83280;
+}
+.transfer-and-payments-section-form .transfer-and-payments-section-form-resume .transfer-and-payments-section-form-resume-group {
+  display: flex;
+  justify-content: space-between;
+}
+.transfer-and-payments-section-form .transfer-and-payments-section-form-resume .transfer-and-payments-section-form-resume-group span:last-child {
+  color: #B83280;
+}
+.transfer-and-payments-section-form form {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.transfer-and-payments-section-form form .transfer-and-payments-section-form-input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  color: #d4d4d8;
+}
+.transfer-and-payments-section-form form .transfer-and-payments-section-form-input-group input {
+  padding: 0.4rem;
+  border-radius: 8px;
+  outline-color: #d4d4d8;
+  border: 2px solid #d4d4d8;
+  font-family: "Alexandria", sans-serif;
+}
+.transfer-and-payments-section-form form button {
+  font-family: "Alexandria", sans-serif;
+  padding: 0.5rem 1rem;
+  margin: 0 auto;
+  width: 100%;
+  border-radius: 8px;
+  background-color: rgb(53, 50, 218);
+  border: 1px solid rgb(32, 30, 192);
+  color: #f4f4f5;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  transition: all 0.4s;
+}
+.transfer-and-payments-section-form form button:hover {
+  transform: scale(1.05);
+}
+.transfer-and-payments-section-form form button a {
+  color: #fff;
 }/*# sourceMappingURL=styles.css.map */
