--- a/Javascript/shire-bank/src/pages/Application/Dashboard/styles.scss
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/styles.scss
@@ -83,7 +83,7 @@ aside {
 
     h3 {
       font-weight: 400;
-      
+
       font-size: 1.125rem;
       letter-spacing: 1.5px;
     }
@@ -100,3 +100,129 @@ aside {
     }
   }
 }
+
+.transfer-and-payments-section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+  position: relative;
+
+  .transfer-and-payments-section-title {
+    position: absolute;
+    left: 0;
+    padding: 1rem;
+    top: 0;
+    font-size: 1.2rem;
+  }
+
+  .transfer-and-payments-section-card {
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    gap: 0.5rem;
+    border: 2px solid transparent;
+    padding: .5rem;
+    border-radius: 8px;
+    margin-top: 2.5rem;
+    transition: all .4s;
+
+    &.active {
+      border: 2px solid $boxShadow-rgb-before-hover;
+    }
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    img {
+      width: 100px;
+    }
+
+    span {
+      width: 100%;
+      text-align: center;
+      font-family: 'Alexandria', sans-serif;
+      color: $gray-100;
+      font-size: 1rem;
+    }
+  }
+}
+
+.transfer-and-payments-section-form {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+
+  .transfer-and-payments-section-form-resume {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    width: 50%;
+    border-radius: 8px;
+    color: $gray-100;
+    padding: 0 1rem;
+    border: 2px solid $pink;
+
+    .transfer-and-payments-section-form-resume-title {
+      font-size: 1.3rem;
+      color: $pink;
+    }
+
+    .transfer-and-payments-section-form-resume-group {
+      display: flex;
+      justify-content: space-between;
+
+      & span:last-child {
+        color: $pink;
+      }
+    }
+  }
+
+  form {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    .transfer-and-payments-section-form-input-group {
+      display: flex;
+      flex-direction: column;
+      gap: .25rem;
+      color: $gray-300;
+
+      input {
+        padding: .4rem;
+        border-radius: 8px;
+        outline-color: $gray-300;
+        border: 2px solid $gray-300;
+        font-family: 'Alexandria', sans-serif;
+      }
+    }
+
+    button {
+      font-family: 'Alexandria', sans-serif;
+      padding: .5rem 1rem;
+      margin: 0 auto;
+      width: 100%;
+      border-radius: 8px;
+      background-color: $blue-300;
+      border: 1px solid $blue-500;
+      color: $gray-100;
+      font-size: 1.2rem;
+      text-transform: uppercase;
+      transition: all .4s;
+
+      &:hover {
+        transform: scale(1.05);
+      }
+
+      a {
+        color: $white;
+      }
+    }
+  }
+}
+
