Connection with Supabase database and form validation

--- a/Javascript/shire-bank/src/pages/Login/styles.css
+++ b/Javascript/shire-bank/src/pages/Login/styles.css
@@ -134,6 +134,10 @@ header button {
   flex-direction: row;
   gap: 1rem;
 }
+.main-wrapper .login-container form .warning {
+  font-size: 0.8rem;
+  color: #ef4444;
+}
 
 @media only screen and (max-width: 1024px) {
   .main-wrapper section h2 {
