--- a/Javascript/shire-bank/_variables.scss
+++ b/Javascript/shire-bank/_variables.scss
@@ -15,6 +15,8 @@ $blue-500: rgb(32, 30, 192);
 $pink: #B83280;
 
 $red-700: #b91c1c;
+$red-500: #ef4444;
+
 $green-700: #15803d;
 
 $background-rgb-button: linear-gradient(140deg, rgb(29, 18, 61) 0%, rgba(50, 38, 89, 1) 68%, rgb(29, 18, 61) 100%);
