--- a/Javascript/shire-bank/src/pages/Login/styles.scss
+++ b/Javascript/shire-bank/src/pages/Login/styles.scss
@@ -109,6 +109,22 @@ header {
       flex-direction: column;
       gap: 1rem;
 
+      .login-content-form-message {
+        padding: 0.5rem 1rem;
+        font-size: .9rem;
+        border-radius: 8px;
+        color: $gray-100;
+      }
+
+      .login-content-form-message-error {
+        background-color: $red-500;
+        
+      }
+
+      .login-content-form-message-success {
+        background-color: $green-700;
+      }
+
       div {
         display: flex;
         flex-direction: column;
@@ -165,6 +181,20 @@ header {
       .warning {
         font-size: .8rem;
         color: $red-500;
+      }
+
+      .hidden {
+        display: none;
+      }
+
+      .login-content-input-password{
+        .login-content-input-password-requirements {
+          div {
+            margin-left: 1rem;
+            color: $pink;
+            font-size: .9rem;
+          }
+        }
       }
     }
   }
