--- a/Javascript/shire-bank/src/components/Header/styles_header.css
+++ b/Javascript/shire-bank/src/components/Header/styles_header.css
@@ -34,8 +34,49 @@ header {
   font-size: 1rem;
 }
 
+.button-mobile {
+  display: none;
+}
+
 @media only screen and (max-width: 1536px) {
   header {
     padding: 0 1rem;
+  }
+}
+@media only screen and (max-width: 640px) {
+  body {
+    position: relative;
+  }
+  .navbar {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    top: 90px;
+    left: 0px;
+    flex-direction: column;
+    background: linear-gradient(140deg, rgb(8, 5, 17) 0%, rgb(42, 27, 89) 50%, rgb(50, 38, 89) 68%, rgb(112, 36, 89) 100%);
+    height: 0px;
+    z-index: 1000;
+    transition: 0.4s;
+    visibility: hidden;
+    overflow-y: hidden;
+  }
+  .navbar.active {
+    display: flex;
+    height: 100%;
+    visibility: visible;
+  }
+  .navbar li {
+    font-size: 1.5rem;
+    text-align: center;
+    width: 50%;
+    padding-bottom: 0.5rem;
+    border-bottom: 2px solid #B83280;
+  }
+  .navbar li:last-child {
+    border-bottom: none;
+  }
+  .button-mobile {
+    display: block;
   }
 }/*# sourceMappingURL=styles_header.css.map */
