--- a/Javascript/shire-bank/src/components/Header/styles_header.scss
+++ b/Javascript/shire-bank/src/components/Header/styles_header.scss
@@ -36,6 +36,10 @@ header {
   font-size: 1rem;
 }
 
+.button-mobile {
+  display: none;
+}
+
 // Media Queries
 
 @media only screen and (max-width: 1536px) {
@@ -44,3 +48,45 @@ header {
   }
 }
 
+@media only screen and (max-width: 640px) {
+  body {
+    position: relative;
+  }
+
+  .navbar {
+    display: flex;
+    position: absolute;
+    width: 100%;
+    top: 90px;
+    left: 0px;
+    flex-direction: column;
+    background: linear-gradient(140deg, rgb(8, 5, 17) 0%, rgba(42,27,89,1) 50%, rgba(50,38,89,1) 68%, rgba(112,36,89,1) 100%);
+    height: 0px;
+    z-index: 1000;
+    transition: .4s;
+    visibility: hidden;
+    overflow-y: hidden;
+
+    &.active {
+      display: flex;
+      height: 100%;
+      visibility: visible;
+    }
+
+    li {
+      font-size: 1.5rem;
+      text-align: center;
+      width: 50%;
+      padding-bottom: .5rem;
+      border-bottom: 2px solid $pink;
+
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+  }
+
+  .button-mobile {
+    display: block;
+  }
+}
