--- a/Javascript/shire-bank/src/pages/Application/Dashboard/components/Home/styles.css
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/components/Home/styles.css
@@ -55,4 +55,43 @@
 
 .home-section-creditCard .home-section-creditCard-content div:last-child {
   margin-top: 0.5rem;
+}
+
+@media only screen and (max-width: 1024px) {
+  .home-section-info .home-section-info-user h1 {
+    font-size: 1.25rem;
+  }
+  .home-section-options button {
+    font-size: 0.7rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .home-section-options button img {
+    width: 50px;
+  }
+}
+@media only screen and (max-width: 640px) {
+  .home-section-info .home-section-info-user h1 {
+    font-size: 1rem;
+  }
+  .home-section-info .home-section-info-user a {
+    right: -5px;
+    top: -5px;
+  }
+  .home-section-info .home-section-info-user a .aside-button-logout {
+    font-size: 0.8rem;
+    padding: 0.5rem 0.7rem;
+  }
+  .home-section-info .home-section-info-balance {
+    margin-top: 2rem;
+  }
+  .home-section-options button {
+    font-size: 0.9rem;
+  }
+  .home-section-options button img {
+    width: 50px;
+  }
+  .home-section-options .home-section-options-card {
+    width: 50%;
+  }
 }/*# sourceMappingURL=styles.css.map */
