--- a/Javascript/shire-bank/src/pages/Application/Dashboard/components/Home/styles.scss
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/components/Home/styles.scss
@@ -74,3 +74,69 @@
     }
   }
 }
+
+// Media Queries
+
+@media only screen and (max-width: 1024px) {
+  .home-section-info {
+    .home-section-info-user {
+      h1 {
+        font-size: 1.25rem;
+      }
+    }
+  }
+
+  .home-section-options {
+    button {
+      font-size: 0.7rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .home-section-options {
+    button {
+      img {
+        width: 50px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .home-section-info {
+    .home-section-info-user {
+      h1 {
+        font-size: 1rem;
+      }
+  
+      a {
+        right: -5px;
+        top: -5px;
+  
+        .aside-button-logout {
+          font-size: 0.8rem;
+          padding: 0.5rem .7rem;
+        }
+      }
+    }
+  
+    .home-section-info-balance {
+      margin-top: 2rem;
+    }
+  }
+
+  .home-section-options {  
+    button {
+      font-size: .9rem;
+  
+      img {
+        width: 50px;
+      }
+  }
+  
+    .home-section-options-card {
+      width: 50%;
+    }
+  }
+}
