--- a/Javascript/shire-bank/src/pages/Application/Dashboard/styles.scss
+++ b/Javascript/shire-bank/src/pages/Application/Dashboard/styles.scss
@@ -14,6 +14,29 @@ aside {
   width: 250px;
   color: $white;
   min-height: 100vh;
+  position: relative;
+  transition: all .4s;
+
+  .button-menu {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: $pink;
+    right: -20px;
+    z-index: 1;
+    border-color: transparent;
+
+    :hover {
+      cursor: pointer;
+    }
+
+    &::before{
+      content: '<';
+      font-size: 2rem;
+      color: $gray-100;
+    }
+  }
 
   .aside-container {
     width: 250px;
@@ -26,7 +49,7 @@ aside {
   }
 
   & div:first-child {
-    margin-top: 1rem;
+    margin-top: 2rem;
   }
 
   .aside-button-option {
@@ -48,6 +71,20 @@ aside {
       &:hover {
         color: $white;
         border-color: $white;
+      }
+    }
+  }
+
+  &.active {
+    width: 25px;
+
+    .aside-container {
+      display: none;
+    }
+
+    .button-menu {
+      &::before{
+        content: '>';
       }
     }
   }
@@ -119,6 +156,7 @@ aside {
   .transfer-and-payments-section-card {
     display: flex;
     flex-direction: column;
+    align-items: center;
     background-color: transparent;
     gap: 0.5rem;
     border: 2px solid transparent;
@@ -152,75 +190,334 @@ aside {
 .transfer-and-payments-section-form {
   margin-top: 2rem;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   gap: 1rem;
 
-  .transfer-and-payments-section-form-resume {
+  .transfer-and-payments-section-form-group {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     gap: 1rem;
-    width: 50%;
-    border-radius: 8px;
-    color: $gray-100;
-    padding: 0 1rem;
-    border: 2px solid $pink;
 
-    .transfer-and-payments-section-form-resume-title {
-      font-size: 1.3rem;
-      color: $pink;
+    .transfer-and-payments-section-form-resume {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 1rem;
+      width: 60%;
+      border-radius: 8px;
+      color: $gray-100;
+      padding: 1rem;
+      border: 2px solid $pink;
+
+      .transfer-and-payments-section-form-resume-title {
+        font-size: 1.3rem;
+        color: $pink;
+      }
+
+      .transfer-and-payments-section-form-resume-group {
+        display: flex;
+        justify-content: space-between;
+
+        & span:last-child {
+          color: $pink;
+        }
+      }
     }
 
-    .transfer-and-payments-section-form-resume-group {
+    form {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      .warning {
+        font-size: .8rem;
+        color: $red-500;
+      }
+
+      .hidden {
+        display: none;
+      }
+
+      .transfer-and-payments-section-form-input-group {
+        display: flex;
+        flex-direction: column;
+        gap: .25rem;
+        color: $gray-300;
+
+        input {
+          padding: .4rem;
+          border-radius: 8px;
+          outline-color: $gray-300;
+          border: 2px solid $gray-300;
+          font-family: 'Alexandria', sans-serif;
+        }
+      }
+
+      button {
+        font-family: 'Alexandria', sans-serif;
+        padding: .5rem 1rem;
+        margin: 0 auto;
+        width: 100%;
+        border-radius: 8px;
+        background-color: $blue-300;
+        border: 1px solid $blue-500;
+        color: $gray-100;
+        font-size: 1.2rem;
+        text-transform: uppercase;
+        transition: all .4s;
+
+        &:hover {
+          transform: scale(1.05);
+        }
+
+        a {
+          color: $white;
+        }
+      }
+    }
+  }
+}
+
+.root-payment-invoice {
+
+  .root-payment-invoice-total {
+    margin: 0 auto;
+    background-color: $pink;
+    padding: 0.5rem;
+    width: max-content;
+    border-radius: 8px;
+    letter-spacing: 1px;
+  }
+
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  .statement-card {
+    display: flex;
+    flex-direction: column;
+    gap: .1rem;
+  
+    .statement-card-title {
       display: flex;
       justify-content: space-between;
+      align-items: center;
+    }
+  
+    .statement-card-customer {
+      font-size: .9rem;
+      color: $gray-400;
+      margin-left: .5rem;
+    }
+  
+    .statement-card-price {
+      letter-spacing: .8px;
+      margin-left: .5rem;
+    }
+  
+    .expense {
+      color: $red-700;
+    }
+  
+    .income {
+      color: $green-700;
+    }
+  }
 
-      & span:last-child {
-        color: $pink;
+  button {
+    font-family: 'Alexandria', sans-serif;
+    padding: .5rem 1rem;
+    margin: 0 auto;
+    width: 95%;
+    border-radius: 8px;
+    background-color: $blue-300;
+    border: 1px solid $blue-500;
+    color: $gray-100;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    transition: all .4s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+
+    a {
+      color: $white;
+    }
+  }
+}
+
+// Media Queries
+
+@media only screen and (max-width: 1280px) {
+  main {
+    gap: 1rem;
+  }
+
+  .root-xl {
+    max-width: 60%;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  html, body {
+    font-size: 15px;
+  }
+
+  .root {
+    max-width: 60%;
+  }
+
+  .transfer-and-payments-section { 
+    .transfer-and-payments-section-title {
+      font-size: 1.1rem;
+    }
+  }
+
+  .transfer-and-payments-section-form {
+  
+    .transfer-and-payments-section-form-group {  
+      .transfer-and-payments-section-form-resume {  
+        .transfer-and-payments-section-form-resume-title {
+          font-size: 1.2rem;
+        }
+  
+        .transfer-and-payments-section-form-resume-group {
+          font-size: .8rem;
+        }
+      }
+  
+      form {   
+        button {
+          font-size: 1rem;
+  
+          &:hover {
+            transform: scale(1.02);
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .root {
+    max-width: 70%;
+  }
+
+  .transfer-and-payments-section { 
+    .transfer-and-payments-section-title {
+      font-size: 1rem;
+    }
+  }
+
+  .payments-xl {
+    gap: 1rem;
+  }
+
+  .transfer-and-payments-section-form {
+    .transfer-and-payments-section-form-group {  
+      flex-direction: column;
+
+      .transfer-and-payments-section-form-resume {
+        width: 100%;
+
+        .transfer-and-payments-section-form-resume-title {
+          font-size: 1.2rem;
+        }
+  
+        .transfer-and-payments-section-form-resume-group {
+          font-size: 1rem;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  html, body {
+    font-size: 14px;
+  }
+
+  main {
+    position: relative;
+  }
+
+  aside {
+    width: 100%;
+    position: absolute;
+    z-index: 10;
+    height: 100%;
+
+    .button-menu {
+      right: 0;
+      margin-right: .5rem;
+    }
+
+    .aside-button-option {
+      button {
+        font-size: 1.1rem;
+      }
+    }
+
+    &.active {
+      width: 15px;
+
+      .button-menu {
+        right: -18px;
+        margin-right: 0;
       }
     }
   }
 
-  form {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  .root {
+    max-width: 80%;
+    padding: 1rem 1rem;
+    gap: 1.5rem;
+  }
 
-    .transfer-and-payments-section-form-input-group {
-      display: flex;
-      flex-direction: column;
-      gap: .25rem;
-      color: $gray-300;
-
-      input {
-        padding: .4rem;
-        border-radius: 8px;
-        outline-color: $gray-300;
-        border: 2px solid $gray-300;
-        font-family: 'Alexandria', sans-serif;
+  .section-container {
+    .section-content {  
+      h3 {
+        font-size: 1rem;
+        letter-spacing: 1px;
+      }
+  
+      & h3+span {
+        font-size: .9rem;
       }
     }
+  }
 
-    button {
-      font-family: 'Alexandria', sans-serif;
-      padding: .5rem 1rem;
-      margin: 0 auto;
-      width: 100%;
-      border-radius: 8px;
-      background-color: $blue-300;
-      border: 1px solid $blue-500;
-      color: $gray-100;
-      font-size: 1.2rem;
-      text-transform: uppercase;
-      transition: all .4s;
+  .transfer-and-payments-section {
+    gap: 1rem;
+  
+    .transfer-and-payments-section-title {
+      font-size: 1rem;
+    }
+  
+    .transfer-and-payments-section-card {
+      margin-top: 3.5rem;
 
-      &:hover {
-        transform: scale(1.05);
+      img {
+        width: 50px;
       }
-
-      a {
-        color: $white;
+  
+      span {
+        font-size: .9rem;
+      }
+    }
+  }
+  
+  .transfer-and-payments-section-form {  
+    .transfer-and-payments-section-form-group {  
+      .transfer-and-payments-section-form-resume {   
+        .transfer-and-payments-section-form-resume-group {
+          flex-direction: column;
+          gap: .1rem;
+        }
       }
     }
   }
