--- a/Javascript/shire-bank/src/pages/Login/styles.scss
+++ b/Javascript/shire-bank/src/pages/Login/styles.scss
@@ -51,6 +51,7 @@ header {
       background-color: $blue-500;
       padding: 1rem;
       border-radius: 10px;
+      letter-spacing: .5px;
 
       .section-comments-user {
         margin-top: 1rem;
@@ -73,6 +74,10 @@ header {
             font-size: .8rem;
             color: $gray-300;
           }
+        }
+
+        img {
+          width: 70px;
         }
       }
     }
@@ -108,22 +113,6 @@ header {
       display: flex;
       flex-direction: column;
       gap: 1rem;
-
-      .login-content-form-message {
-        padding: 0.5rem 1rem;
-        font-size: .9rem;
-        border-radius: 8px;
-        color: $gray-100;
-      }
-
-      .login-content-form-message-error {
-        background-color: $red-500;
-        
-      }
-
-      .login-content-form-message-success {
-        background-color: $green-700;
-      }
 
       div {
         display: flex;
@@ -206,7 +195,23 @@ header {
   .main-wrapper {
     section {
       h2 {
-        font-size: 2rem;
+        font-size: 1.8rem;
+      }
+
+      .section-call-to-action-subtitle {
+        font-size: .9rem;
+      }
+
+      .section-comments { 
+        p {
+          font-size: .8rem;
+        }
+
+        .section-comments-user {
+          img {
+            width: 50px;
+          }
+        }
       }
     }
 
@@ -221,8 +226,16 @@ header {
 }
 
 @media only screen and (max-width: 768px) {
+  html, body {
+    font-size: 15px;
+  }
+
   .main-wrapper {
+    gap: 1rem;
+
     section {
+      padding: 1rem;
+
       h2 {
         margin-top: 1rem;
         font-size: 1.5rem;
@@ -249,4 +262,12 @@ header {
       }
     }
   } 
+}
+
+@media only screen and (max-width: 640px) {
+  .main-wrapper {
+    section {
+      display: none;
+    }
+  }
 }
