--- a/Javascript/shire-bank/styles.css
+++ b/Javascript/shire-bank/styles.css
@@ -203,8 +203,8 @@ footer .footer-content-flex .footer-content-column a:hover {
   }
 }
 @media only screen and (max-width: 640px) {
-  header nav {
-    display: none;
+  html, body {
+    font-size: 14px;
   }
   .main-content h1 {
     margin-top: 2rem;
@@ -223,7 +223,7 @@ footer .footer-content-flex .footer-content-column a:hover {
     font-size: 1rem;
   }
   .main-content-status {
-    gap: 4rem;
+    gap: 2rem;
     font-size: 2rem;
   }
   .main-features {
@@ -248,7 +248,7 @@ footer .footer-content-flex .footer-content-column a:hover {
     margin-top: 2rem;
   }
   footer .footer-wrapper {
-    gap: 1rem;
+    gap: 0.5rem;
     align-items: flex-start;
   }
   footer .footer-content-columns {
